# CONDA

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: ann_exception.h  boost_dynamic_bitset_fwd.h  distance.h  dynamic_index.h  index.h  natural_number_map.h  natural_number_set.h  neighbor.h  parameters.h  store.h  tag_uint128.h  util.h  windows_customizations.h
runbooks/: clustered_runbook.yaml  expiration_runbook.yaml  sliding_window_runbook.yaml
scripts/: download_dataset.sh  generate_groundtruth.py  generate_groundtruth.sh  parse_result.sh  plot_results.py  run_all.sh  run_experiments.sh
src/: CMakeLists.txt  ann_exception.cpp  dynamic_index.cpp  index.cpp  natural_number_map.cpp  natural_number_set.cpp
tests/: CMakeLists.txt  generate_groundtruth.cpp  test.cpp
